# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/tizen.gni")

import("${tizen_sdk_build_root}/tizen_sdk.gni")

tizen_qemu_mkisofs("unit-test-runner") {
  runner = "runner.sh"

  # Build applications used in the test.
  deps = [ "//third_party/connectedhomeip/src/platform/tests:TestDnssd" ]

  # Use artifacts created by the dependencies.
  assets = [ rebase_path("${root_build_dir}/tests/TestDnssd") ]
}

tizen_qemu_run("check-unit") {
  virtio_net = true
  deps = [ ":unit-test-runner" ]
  mkisofs_outputs = get_target_outputs(":unit-test-runner")
  iso_image = rebase_path(mkisofs_outputs[0])
}
